Updated README.md with IntelliJ information