@@ -18,3 +18,13 @@ Example:
         }
         
     }
+    
+## IntelliJ IDEA
+
+IntelliJ adds by default the `javafx.base` and `javafx.graphics` to the modules of Java 9+.
+This might be causing issues in Java 9 and above, as the `javafx.controls` and `javafx.fxml` are 
+missing from the modules causing an `IllegalAccessException` when trying to run the application.
+
+Add the following options to the `VM Options` in the run configuration of IntelliJ to fix this issue. 
+
+    -p "<PATH TO JAVAFX SDK>\lib" --add-modules javafx.controls,javafx.fxml
